--- a/package.json
+++ b/package.json
@@ -1,35 +1,47 @@
 {
-  "name": "OpenShift-Sample-App",
-  "version": "1.0.0",
-  "description": "OpenShift Sample Application",
+  "name": "softball",
+  "version": "0.0.1",
+  "description": "Frederiction Fun Softball League Website",
   "keywords": [
-    "OpenShift",
-    "Node.js",
-    "application",
-    "openshift"
+    "Fredericton",
+    "fun",
+    "softball",
+    "slopitch",
+    "slowpitch",
+    "coed"
   ],
   "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
+    "name": "Bradley Bergeron",
+    "email": "frederictonfunsoftball@gmail.com",
+    "url": "http://frederictonfunsoftball.com/"
   },
-  "homepage": "http://www.openshift.com/",
+  "homepage": "http://frederictonfunsoftball.com/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/openshift/origin-server"
+    "url": "http://"
   },
-
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
   },
-
   "dependencies": {
-    "express": "~3.4.4"
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "mysql": "^2.5.4",
+    "moment": "2.11.1",
+    "xoauth2": "~1.1.0",
+    "letsencrypt": "~1.4.0",
+    "request": "~2.69.0",
+    "pdfkit": "~0.7.2",
+    "fs": "~0.0.2",
+    "pdfmake": "~0.1.18"
   },
   "devDependencies": {},
   "bundleDependencies": [],
-
   "private": true,
   "main": "server.js"
 }
