--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "softball",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "description": "Frederiction Fun Softball League Website",
   "keywords": [
     "Fredericton",
@@ -21,24 +21,27 @@
     "url": "http://"
   },
   "engines": {
-    "node": ">= 0.6.0",
-    "npm": ">= 1.0.0"
+    "node": "6.9.5",
+    "npm": "3.10.10"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "bcrypt": "1.0.2",
+    "body-parser": "~1.16.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.1",
+    "express": "~4.14.1",
+    "fs": "~0.0.1-security",
+    "greenlock": "~2.1.8",
+    "greenlock-express": "^2.0.9",
+    "ical-toolkit": "~1.0.9",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "mysql": "^2.5.4",
-    "moment": "2.11.1",
-    "xoauth2": "~1.1.0",
-    "letsencrypt": "~1.4.0",
-    "request": "~2.69.0",
-    "pdfkit": "~0.7.2",
-    "fs": "~0.0.2",
-    "pdfmake": "~0.1.18"
+    "moment": "2.17.1",
+    "morgan": "~1.8.1",
+    "mysql": "^2.13.0",
+    "pdfkit": "~0.8.0",
+    "pdfmake": "~0.1.26",
+    "request": "~2.79.0",
+    "xoauth2": "~1.2.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
