--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "1.0.2",
     "body-parser": "~1.16.1",
     "cookie-parser": "~1.4.3",
+    "crypto-js": "~3.1.9-1",
     "debug": "~2.6.1",
     "express": "~4.14.1",
     "fs": "~0.0.1-security",
