--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "greenlock-express": "^2.0.9",
     "ical-toolkit": "~1.0.9",
     "jade": "~1.11.0",
+    "js-sha256": "~0.5.0",
     "moment": "2.17.1",
     "morgan": "~1.8.1",
     "mysql": "^2.13.0",
