--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jade": "~1.11.0",
     "js-sha256": "~0.5.0",
     "le-challenge-fs": "~2.0.8",
+    "le-store-certbot": "~2.0.5",
     "moment": "2.17.1",
     "morgan": "~1.8.1",
     "mysql": "^2.13.0",
